--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ushell-module-homebrew",
-  "version": "0.0.1",
+  "name": "@feizheng/ushell-module-homebrew",
+  "version": "1.0.0",
   "description": "Unix like shell for mac homebrew.",
   "main": "index.sh",
   "repository": {
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/afeiship/ushell-module-homebrew/issues"
   },
-  "homepage": "https://github.com/afeiship/ushell-module-homebrew"
+  "homepage": "https://github.com/afeiship/ushell-module-homebrew",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  }
 }
