--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@feizheng/ushell-module-homebrew",
-  "version": "1.0.3",
+  "name": "@jswork/ushell-module-homebrew",
+  "version": "1.0.0",
   "description": "Unix like shell for mac homebrew.",
   "main": "index.sh",
   "repository": {
@@ -8,10 +8,12 @@
     "url": "git+https://github.com/afeiship/ushell-module-homebrew.git"
   },
   "keywords": [
-    "ushell",
     "unix",
     "shell",
-    "ushell-module-homebrew"
+    "module",
+    "homebrew",
+    "mac",
+    "brew"
   ],
   "authors": [
     "feizheng <1290657123@qq.com>"
