--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
   },
   "homepage": "https://github.com/afeiship/ushell-module-homebrew",
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "scripts": {
+    "release": "release-it"
+  },
+  "dependencies": {
+    "release-it": "^15.4.1"
   }
 }
